# allocators

./: CMakeLists.txt  README.md  affix_allocator.cpp  affix_allocator.h  block.h  fallback_allocator.cpp  fallback_allocator.h  free_list_allocator.cpp  free_list_allocator.h  null_allocator.cpp  null_allocator.h  stack_allocator.cpp  stack_allocator.h
detail/: unique_resource.h
